--- a/sass/anymeal/layout-essentials/_anymeal_typography.scss
+++ b/sass/anymeal/layout-essentials/_anymeal_typography.scss
@@ -9,5 +9,16 @@
 // ----------------------------
 
 
+// Links
+// -----
+a {
+	&:hover {
+		@include transition(color .15s ease-in-out);
+	}
+}
 
-
+// Headers
+// -------
+h1, h2, h3, h4, h5, h6 {
+	text-transform: uppercase !important;
+}
