--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,3 +1,6 @@
+// Compass
+@import "compass";
+
 // Global Foundation Settings
 @import "settings";
 
@@ -15,7 +18,7 @@
 // @import "foundation/components/visibility";
 @import "foundation/components/block-grid";
 @import "foundation/components/type";
-// @import "foundation/components/buttons";
+@import "foundation/components/buttons";
 @import "foundation/components/forms"; // *requires components/buttons
 @import "foundation/components/custom-forms"; // *requires components/buttons, components/forms
 @import "foundation/components/button-groups"; // *requires components/buttons
@@ -52,7 +55,15 @@
 // ----------------------------
 // AnyMeal Style
 // ----------------------------
-@import "anymeal/layout/anymeal_typography";
+
+// Layout Essentials
+@import "anymeal/layout-essentials/anymeal_typography";			// Typography
+@import "anymeal/layout-essentials/anymeal_topbar";				// Top-Bar
+@import "anymeal/layout-essentials/anymeal_footer";				// Footer
+
+
+
+
 
 
 
