--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -31,6 +31,20 @@ $em-base: 16px !default;
 $sans-serif: 		"brandon-grotesque";
 $serif: 			"ff-tisa-web-pro";
 
+
+
+// Colors
+// ------
+$black: 			#000;
+$white: 			#fff;
+$grey: 				#a7a9ac;
+$dark-grey: 		#636567;
+
+
+
+
+
+
 // $body-bg: #fff;
 // $body-font-color: #222;
 $body-font-family: "ff-tisa-web-pro",  "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
@@ -180,8 +194,8 @@ $header-font-family: "brandon-grotesque", "Helvetica Neue", "Helvetica", Helveti
 // Anchors
 
 // $anchor-text-decoration: none;
-// $anchor-font-color: $primary-color;
-// $anchor-font-color-hover: darken($primary-color, 5%);
+$anchor-font-color: $dark-grey;
+$anchor-font-color-hover: $grey;
 
 // <hr> element
 
@@ -1208,17 +1222,5 @@ $topbar-menu-link-transform: uppercase;
 // Transitions and breakpoint styles
 
 // $topbar-transition-speed: 300ms;
-// $topbar-breakpoint: emCalc(940px); // Change to 9999px for always mobile layout
+$topbar-breakpoint: emCalc(768px); // Change to 9999px for always mobile layout
 // $topbar-media-query: "only screen and (min-width: "#{$topbar-breakpoint}")";
-
-
-// Colors
-// ------
-$black: 			#000;
-$white: 			#fff;
-$grey: 				#a7a9ac;
-$dark-grey: 		#636567;
-
-
-
-
